Small Cache tool, comments, add mobile/desktop views, Open Sans default font, fix dashboard text overflow, cleanup delete card + expand card, sidebar Vue fixes + close popup, inline-editor refactor, card popup refactor.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "homepage": "",
   "dependencies": {
+    "actioncable": "^5.2.2",
     "vuedraggable": "^2.16.0"
   },
   "devDependencies": {
